unpackaged/objects/Agent_Status__c.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <label>Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <description>The channel the agent is on: Phone, Email, Chatter.</description>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The active CXOne interaction record (if any) tied to this status.</description>
        <label>Current Interaction</label>
        <referenceTo>CXOne_Interaction__c</referenceTo>
        <relationshipLabel>Agent Status</relationshipLabel>
        <relationshipName>Agent_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_Minutes__c</fullName>
        <formula>ROUND((Status_End_Time__c - Status_Start_Time__c)*1440,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any free-text context (e.g. “Paused for training”).</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_ID__c</fullName>
        <description>CXOne skill or queue ID the agent is serving (for reporting by queue).</description>
        <label>Skill / Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_End_Time__c</fullName>
        <description>Timestamp when the agent exited this status (blank if still active).</description>
        <label>Status End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Start_Time__c</fullName>
        <description>Timestamp when the agent entered this status.</description>
        <label>Status Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Call</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agent Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>